# medha

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/backends/: index.html
api/config/: index.html
api/core/: index.html
api/embedders/: index.html
api/exceptions/: index.html
api/interfaces/: index.html
api/types/: index.html
benchmarks/: index.html
contributing/: index.html
demo/: 01_text2sql_sqlite.ipynb  02_text2cypher_neo4j.ipynb  03_text2query_mongodb.ipynb  04_custom_embedder.ipynb  05_ner_spacy_vs_gliner.ipynb  06_production_patterns.ipynb  07_openai_embedder.ipynb  08_fuzzy_matching.ipynb  09_multi_tenant.ipynb  10_text2sql_duckdb.ipynb  11_inmemory_backend.ipynb  12_pgvector_backend.ipynb  13_framework_integrations.ipynb  14_elasticsearch_backend.ipynb  15_vectorchord_backend.ipynb  16_chroma_backend.ipynb  17_weaviate_backend.ipynb  18_redis_vector_backend.ipynb  19_azure_search_backend.ipynb  20_lancedb_backend.ipynb  21_cache_lifecycle.ipynb  22_observability.ipynb  23_batch_ops.ipynb  24_qdrant_backend.ipynb  25_feedback_loop.ipynb  26_cli.ipynb  templates_cypher.json  templates_mongodb.json  templates_sql.json
demos/: index.html
docs/: benchmarks.md  contributing.md  demos.md  faq.md  getting_started.md  index.md
docs/api/: backends.md  config.md  core.md  embedders.md  exceptions.md  interfaces.md  types.md
docs/stylesheets/: extra.css
docs/user_guide/: backends.md  batch_operations.md  cli.md  concepts.md  configuration.md  embedders.md  feedback.md  framework_integrations.md  invalidation.md  multi_tenancy.md  observability.md  parameter_extraction.md  security.md  templates.md  ttl_and_lifecycle.md
experiments/: backend_comparison_benchmark.py  batch_benchmark.py  concurrency_benchmark.py  cost_benchmark.py  dataset_generation.py  embedding_cache_benchmark.py  gliner_vs_regex_benchmark.py  l1_cache_backend_benchmark.py  latency_benchmark.py  observability_demo.py  test_output.json  threshold_sweep.py
faq/: index.html
getting_started/: index.html
search/: search_index.json
src/medha/: __init__.py  config.py  core.py  exceptions.py  logging.py  types.py
src/medha/backends/: __init__.py  _asyncpg_mixin.py  azure_search.py  chroma.py  elasticsearch.py  lancedb.py  memory.py  pgvector.py  qdrant.py  redis_vector.py  vectorchord.py  weaviate.py
src/medha/cli/: __init__.py  _app.py  _noop_embedder.py
src/medha/embeddings/: __init__.py  cohere_adapter.py  fastembed_adapter.py  gemini_adapter.py  openai_adapter.py
src/medha/interfaces/: __init__.py  embedder.py  l1_cache.py  storage.py
src/medha/l1_cache/: __init__.py  memory.py  redis_adapter.py
src/medha/utils/: __init__.py  nlp.py  normalization.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_batch_ops_e2e.py  test_chroma_e2e.py  test_cli_e2e.py  test_elasticsearch_e2e.py  test_end_to_end.py  test_fastembed_adapter.py  test_feedback_e2e.py  test_inmemory_e2e.py  test_invalidation_e2e.py  test_lancedb_e2e.py  test_pgvector_e2e.py  test_qdrant_backend.py  test_redis_vector_e2e.py  test_template_flow.py  test_ttl_cleanup.py  test_vectorchord_e2e.py
tests/unit/: __init__.py  test_azure_search_backend.py  test_batch_ops.py  test_chroma_backend.py  test_cli.py  test_cohere_adapter.py  test_config.py  test_core_factory.py  test_core_waterfall.py  test_edge_cases.py  test_elasticsearch_backend.py  test_embedder_interface.py  test_exceptions.py  test_feedback.py  test_gemini_adapter.py  test_inmemory_backend.py  test_invalidation.py  test_lancedb_backend.py  test_logging.py  test_nlp.py  test_normalization.py  test_pgvector_backend.py  test_redis_vector_backend.py  test_security.py  test_stats.py  test_storage_interface.py  test_ttl.py  test_types.py  test_vectorchord_backend.py  test_weaviate_backend.py
user_guide/backends/: index.html
user_guide/batch_operations/: index.html
user_guide/cli/: index.html
user_guide/concepts/: index.html
user_guide/configuration/: index.html
user_guide/embedders/: index.html
user_guide/feedback/: index.html
user_guide/framework_integrations/: index.html
user_guide/invalidation/: index.html
user_guide/multi_tenancy/: index.html
user_guide/observability/: index.html
user_guide/parameter_extraction/: index.html
user_guide/security/: index.html
user_guide/templates/: index.html
user_guide/ttl_and_lifecycle/: index.html
