[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medha-archai"
version = "0.1.0"
description = "Semantic Memory for AI Text-to-Query systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Nicola Procopio", email = "nicola.procopio@acsoftware.it" },
]
keywords = ["semantic-cache", "llm", "text-to-sql", "text-to-cypher", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# --- Core dependencies (minimal) ---
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "qdrant-client>=1.9,<2",
]

[project.optional-dependencies]
# Embedding providers
fastembed = ["fastembed>=0.3,<1"]
openai    = ["openai>=1.0,<2"]

# NLP utilities
nlp = ["spacy>=3.7,<4"]

# Fuzzy matching
fuzzy = ["rapidfuzz>=3.0,<4"]

# All optional providers
all = ["medha-archai[fastembed,openai,nlp,fuzzy]"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
Homepage    = "https://github.com/ArchAI-Labs/medha"
Repository  = "https://github.com/ArchAI-Labs/medha"
Issues      = "https://github.com/ArchAI-Labs/medha/issues"

# --- Tool configuration ---

[tool.hatch.build.targets.wheel]
packages = ["src/medha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.coverage.run]
source = ["medha"]

[tool.coverage.report]
omit = [
    "src/medha/embeddings/openai_adapter.py",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
