[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medha-archai"
version = "0.3.0"
description = "Semantic Memory for AI Text-to-Query systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Nicola Procopio", email = "nicola.procopio@acsoftware.it" },
]
keywords = ["semantic-cache", "llm", "text-to-sql", "text-to-cypher", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# --- Core dependencies (minimal) ---
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
]

[project.optional-dependencies]
# Embedding providers
fastembed = ["fastembed>=0.3,<1"]
openai    = ["openai>=1.0,<2"]
cohere    = ["cohere>=5.0,<6"]
gemini    = ["google-generativeai>=0.7,<1"]

# NLP utilities
nlp = ["spacy>=3.7,<4"]
gliner = ["gliner>=0.2,<1"]

# Fuzzy matching
fuzzy = ["rapidfuzz>=3.0,<4"]

# Redis Stack (RediSearch) vector backend + L1 cache
redis = ["redis[hiredis]>=4.6,<6"]

# All optional providers
qdrant = ["qdrant-client>=1.9,<2"]
pgvector = [
    "asyncpg>=0.29,<1",
    "pgvector>=0.3,<1",
]
elasticsearch = ["elasticsearch[async]>=8.12,<9"]
vectorchord = ["asyncpg>=0.29,<1"]
chroma = ["chromadb>=0.5,<1"]
weaviate = ["weaviate-client>=4.6,<5"]

all = ["medha-archai[fastembed,openai,cohere,gemini,nlp,gliner,fuzzy,redis,qdrant,pgvector,elasticsearch,vectorchord,chroma,weaviate]"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
Homepage    = "https://github.com/ArchAI-Labs/medha"
Repository  = "https://github.com/ArchAI-Labs/medha"
Issues      = "https://github.com/ArchAI-Labs/medha/issues"

# --- Tool configuration ---

[tool.hatch.build.targets.wheel]
packages = ["src/medha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: tests that require heavy models or real embedders",
    "pgvector: tests that require a running PostgreSQL with pgvector extension",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
# TC001/TC003: imports ARE needed at runtime (Pydantic models, ABC signatures, isinstance)
# B017: broad pytest.raises(Exception) is intentional in hierarchy tests
ignore = ["TC001", "TC003"]

[tool.ruff.lint.per-file-ignores]
# E402: imports after pytest.importorskip are intentional
# A002: `id` arg in test helpers is conventional and clear in context
# B017: broad Exception in hierarchy tests is intentional
"tests/**" = ["E402", "A002", "B017"]

[tool.coverage.run]
source = ["medha"]

[tool.coverage.report]
omit = [
    "src/medha/embeddings/openai_adapter.py",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "spacy",
    "spacy.*",
    "gliner",
    "gliner.*",
    "openai",
    "openai.*",
    "fastembed",
    "fastembed.*",
    "rapidfuzz",
    "rapidfuzz.*",
    "asyncpg",
    "asyncpg.*",
    "pgvector",
    "pgvector.*",
    "redis",
    "redis.*",
    "numpy",
    "numpy.*",
    "elasticsearch",
    "elasticsearch.*",
    "chromadb",
    "chromadb.*",
    "weaviate",
    "weaviate.*",
    "cohere",
    "cohere.*",
    "google.generativeai",
    "google.generativeai.*",
]
ignore_missing_imports = true
